# plumbline

./: .gitignore  .plumbline.toml.example  .pre-commit-hooks.yaml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  README.md  action.yml  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  false_positive_report.md  rule_request.md
.github/workflows/: ci.yml  dco.yml  publish.yml
benchmark/: precision.md  real-repos.md
benchmark/corpus/: agent_interactive.py  sec002_eval.py  sec003_shell.py  sec004_secret.py  sec005_sql.py  sec006_xss.py  sec_safe.py
docs/: ai-remediation.md  backlog.md  ci-integration.md  sarif-code-scanning.md  standards-map.md
docs/adr/: 0013-non-python-evidence-scanning.md  0016-project-level-adapter-triggering.md
docs/examples/: llm-sample-report.html
docs/launch/: launch-checklist.md
docs/specs/: adapter-contract.md  harness-rules.md
fixtures/PLB-AGT-001/: bad_crewai_uncapped.py  bad_handrolled_loop.py  bad_langchain_uncapped.py  good_handrolled_capped.py  good_interactive_repl.py  good_langchain_default.py
fixtures/PLB-AGT-002/: bad_no_termination.py  good_for_loop.py  good_goal_break.py
fixtures/PLB-EVAL-003/bad_ci_no_evals/: agent.py
fixtures/PLB-EVAL-003/good_ci_runs_tests/: agent.py
fixtures/PLB-OUT-002/: good_structured_dispatch.py
fixtures/PLB-RES-001/: bad_call_timeout_disabled.py  bad_client_timeout_disabled.py  good_call_timeout.py  good_client_timeout.py  good_sdk_default.py  good_unknown_timeout.py
fixtures/PLB-SEC-004/: good_overloaded_token_names.py  good_test_fakes.py
fixtures/PLB-SEC-005/: good_non_sql_execute.py
fixtures/PLB-TOOL-001/: bad_crewai_no_schema.py  bad_crewai_untyped.py  bad_langchain_untyped.py  good_crewai_basetool.py  good_crewai_init_schema.py  good_crewai_typed_run.py  good_langchain_typed.py
src/plumbline/: baseline.py  cli.py  config.py  engine.py  enrichment.py  model.py
tests/: test_baseline.py  test_cli.py  test_config.py  test_cross_module.py  test_dogfood.py  test_model.py  test_scoring.py  test_suppressions.py
tests/adapters/: test_langchain.py  test_openai_sdk.py
tests/core/: test_ast_layer.py  test_derive.py  test_taint.py  test_values.py
tests/data/: README.md
tests/reporters/: test_html.py  test_json.py  test_sarif.py
tests/rules/: _harness.py  test_base.py  test_fixtures_meta.py
tests/skills/: test_export.py
(+43 files in other folders)
